Fixed mobile menu z-index

--- a/app/styles/_modules/_navigation.scss
+++ b/app/styles/_modules/_navigation.scss
@@ -1,6 +1,6 @@
 .logo {
 	display: block;
-	z-index: 2;
+	z-index: 3;
 
 	@include hide-text;
 	@include position(absolute, 2% null null 5%);
@@ -28,7 +28,7 @@
 	.menu-icon {
 		cursor: pointer;
 		position: relative;
-		z-index: 2;
+		z-index: 3;
 
 		@include size(54px);
 		@include position(absolute, 0% 2% null null);
@@ -96,7 +96,7 @@
 	}
 	.menu-list {
 		position: relative;
-		z-index: 1;
+		z-index: 2;
 
 		@include media($bp-medium) {
 			@include clearfix();
